--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav ">
-      <a class="nav-item nav-link active" href="#"> <span id="active">Home</span> <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">About</a>
-      <a class="nav-item nav-link" href="#">Contact</a>
-      <a class="nav-item nav-link" href="#" tabindex="-1" aria-disabled="true">Projects</a>
+      <a class="nav-item nav-link active" href="index.html"> <span id="active">Home</span> <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="about.html">About</a>
+      <a class="nav-item nav-link" href="contact.html">Contact</a>
+      <a class="nav-item nav-link" href="projects.html" tabindex="-1" aria-disabled="true">Projects</a>
     </div>
   </div>
 </nav>
