--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 </nav>
 	<div class="container content">
 <h1>About Me</h1>
-<h3>I am starting to work on my web design skills. Currently have a beginner to moderate understanding of these front end development skills: HTML, CSS, Javascript, Bootstrap 4, and DOM Manipulation. </h3>
+<h3>I am starting to work on my web design portfolio. Currently have a beginner to moderate understanding of these front end development skills: HTML, CSS, Javascript, Bootstrap 4, and DOM Manipulation. </h3>
 </div>
 </body>
 </html>
