--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <body>
 <!-- Nav bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-  <a class="navbar-brand" href="#">MD</a>
+  <a class="navbar-brand" href="index.html">MD</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
